--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <!-- SLIDE  -->
                         <li data-transition="fade" data-slotamount="5" data-masterspeed="700">
                             <!-- MAIN IMAGE -->
-                            <img src="assets/img/bg/slide_one.jpg" alt="slidebg1" data-bgfit="cover" data-bgposition="center center"
+                            <img src="https://github.com/InglesAI/Aprender/blob/master/new/jubal-kenneth-bernal-733840-unsplash.jpg" alt="slidebg1" data-bgfit="cover" data-bgposition="center center"
                                 data-bgrepeat="no-repeat" background-size=100%100%>
                             <!-- LAYERS -->
                             <div class="tp-caption mediumlarge_light_white_center sft tp-resizeme slider" data-x="center"
