--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <!-- SLIDE  -->
                         <li data-transition="fade" data-slotamount="5" data-masterspeed="700">
                             <!-- MAIN IMAGE -->
-                            <img src="assets/img/bg/slide_one.jpg" alt="slidebg1" data-bgfit="cover" data-bgposition="center center"
+                            <img src="new/freestocks-org-65291-unsplash.jpg" alt="slidebg1" data-bgfit="cover" data-bgposition="center center"
                                 data-bgrepeat="no-repeat" background-size=100%100%>
                             <!-- LAYERS -->
                             <div class="tp-caption mediumlarge_light_white_center sft tp-resizeme slider" data-x="center"
@@ -118,7 +118,7 @@
                         </li>
                         <li data-transition="fade" data-slotamount="5" data-masterspeed="700">
                             <!-- MAIN IMAGE -->
-                            <img src="assets/img/bg/picture-1.jpg" alt="slidebg2" data-bgfit="cover" data-bgposition="center center"
+                            <img src="new/gage-walker-728792-unsplash.jpg" alt="slidebg2" data-bgfit="cover" data-bgposition="center center"
                                 data-bgrepeat="no-repeat">
                             <!-- LAYERS -->
                             <div class="tp-caption mediumlarge_light_white_center sft tp-resizeme slider" data-x="center"
@@ -142,7 +142,7 @@
                         <!-- SLIDE  -->
                         <li data-transition="fade" data-slotamount="5" data-masterspeed="700">
                             <!-- MAIN IMAGE -->
-                            <img src="assets/img/bg/picture-2.jpg" alt="slidebg2" data-bgfit="cover" data-bgposition="center center"
+                            <img src="new/kimberly-farmer-287677-unsplash.jpg" alt="slidebg2" data-bgfit="cover" data-bgposition="center center"
                                 data-bgrepeat="no-repeat">
                             <!-- LAYERS -->
                             <div class="tp-caption mediumlarge_light_white_center sft tp-resizeme slider" data-x="center"
