--- a/index.html
+++ b/index.html
@@ -98,26 +98,6 @@
                         <!-- SLIDE  -->
                         <li data-transition="fade" data-slotamount="5" data-masterspeed="700">
                             <!-- MAIN IMAGE -->
-                            <img src="new/freestocks-org-65291-unsplash.jpg" alt="slidebg1" data-bgfit="cover" data-bgposition="center center"
-                                data-bgrepeat="no-repeat" background-size=100%100%>
-                            <!-- LAYERS -->
-                            <div class="tp-caption mediumlarge_light_white_center sft tp-resizeme slider" data-x="center"
-                                data-hoffset="0" data-y="80" data-speed="500" data-start="800" data-easing="Power4.easeOut"
-                                data-endspeed="300" data-endeasing="Power1.easeIn" data-captionhidden="off" style="z-index: 6">
-                                <h2 class="text-white custom-font title ">
-                                    We Create<br>
-                                    Brands & Marketing
-                                    <br />
-                                    Strategies for Customers</h2>
-                            </div>
-                            <div class="tp-caption sfb slider tp-resizeme slider" data-x="center" data-hoffset="0"
-                                data-y="320" data-speed="800" data-start="1000" data-easing="Power4.easeOut"
-                                data-endspeed="300" data-endeasing="Power1.easeIn" data-captionhidden="off" style="z-index: 6">
-                                <a href="#" class="btn btn-info btn-lg  btn-large m-r-10">Download Template Now</a>
-                            </div>
-                        </li>
-                        <li data-transition="fade" data-slotamount="5" data-masterspeed="700">
-                            <!-- MAIN IMAGE -->
                             <img src="new/gage-walker-728792-unsplash.jpg" alt="slidebg2" data-bgfit="cover" data-bgposition="center center"
                                 data-bgrepeat="no-repeat">
                             <!-- LAYERS -->
@@ -125,18 +105,33 @@
                                 data-hoffset="0" data-y="120" data-speed="500" data-start="800" data-easing="Power4.easeOut"
                                 data-endspeed="300" data-endeasing="Power1.easeIn" data-captionhidden="off" style="z-index: 6">
                                 <h2 class="text-white custom-font title ">
-                                    We Craft<br>
-                                    Our Work to Last Perfection!</h2>
+                                    Aprende<br>
+                                    De la manera correcta!</h2>
                             </div>
                             <div class="tp-caption sfb slider tp-resizeme slider" data-x="center" data-hoffset="0"
                                 data-y="300" data-speed="800" data-start="1000" data-easing="Power4.easeOut"
                                 data-endspeed="300" data-endeasing="Power1.easeIn" data-captionhidden="off" style="z-index: 6">
-                                <a href="#" class="btn btn-info btn-lg  btn-large m-r-10">Know More About Us</a>
+                                <a href="#" class="btn btn-info btn-lg  btn-large m-r-10">Sobre nosotros</a>
                             </div>
-                            <div class="tp-caption fade slider tp-resizeme slider" data-x="center" data-hoffset="0"
-                                data-y="360" data-speed="500" data-start="800" data-easing="Power4.easeOut" data-endspeed="300"
-                                data-endeasing="Power1.easeIn" data-captionhidden="off" style="z-index: 6">
-                                <a href="#" class="text-white m-r-10">or view our pricing</a>
+                        </li>
+                        <li data-transition="fade" data-slotamount="5" data-masterspeed="700">
+                            <!-- MAIN IMAGE -->
+                            <img src="new/freestocks-org-65291-unsplash.jpg" alt="slidebg1" data-bgfit="cover" data-bgposition="center center"
+                                data-bgrepeat="no-repeat" background-size=100%100%>
+                            <!-- LAYERS -->
+                            <div class="tp-caption mediumlarge_light_white_center sft tp-resizeme slider" data-x="center"
+                                data-hoffset="0" data-y="80" data-speed="500" data-start="800" data-easing="Power4.easeOut"
+                                data-endspeed="300" data-endeasing="Power1.easeIn" data-captionhidden="off" style="z-index: 6">
+                                <h2 class="text-white custom-font title ">
+                                    Publicamos<br>
+                                    Contenido de calidad
+                                    <br />
+                                    Publicaciones semanales</h2>
+                            </div>
+                            <div class="tp-caption sfb slider tp-resizeme slider" data-x="center" data-hoffset="0"
+                                data-y="320" data-speed="800" data-start="1000" data-easing="Power4.easeOut"
+                                data-endspeed="300" data-endeasing="Power1.easeIn" data-captionhidden="off" style="z-index: 6">
+                                <a href="#" class="btn btn-info btn-lg  btn-large m-r-10">Publicaciones</a>
                             </div>
                         </li>
                         <!-- SLIDE  -->
@@ -149,14 +144,19 @@
                                 data-hoffset="0" data-y="120" data-speed="500" data-start="800" data-easing="Power4.easeOut"
                                 data-endspeed="300" data-endeasing="Power1.easeIn" data-captionhidden="off" style="z-index: 6">
                                 <h2 class="text-white custom-font title ">
-                                    We Build the Trust<br>
-                                    That Our Clients Needs</h2>
+                                    Conocenos<br>
+                                    Aprende con nosotros</h2>
                             </div>
                             <div class="tp-caption sfb slider tp-resizeme slider" data-x="center" data-hoffset="0"
                                 data-y="300" data-speed="800" data-start="1000" data-easing="Power4.easeOut"
                                 data-endspeed="300" data-endeasing="Power1.easeIn" data-captionhidden="off" style="z-index: 6">
-                                <a href="#" class="btn btn-info btn-lg  btn-large m-r-10">Download Now</a>
+                                <a href="#" class="btn btn-info btn-lg  btn-large m-r-10">Videos</a>
                             </div>
+                            <div class="tp-caption fade slider tp-resizeme slider" data-x="center" data-hoffset="0"
+                                data-y="360" data-speed="500" data-start="800" data-easing="Power4.easeOut" data-endspeed="300"
+                                data-endeasing="Power1.easeIn" data-captionhidden="off" style="z-index: 6">
+                                <a href="#" class="text-white m-r-10">o contactanos</a>
+                            </div>   
                         </li>
                     </ul>
                     <div class="tp-bannertimer">
