--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <!-- SLIDE  -->
                         <li data-transition="fade" data-slotamount="5" data-masterspeed="700">
                             <!-- MAIN IMAGE -->
-                            <img src="new/gage-walker-728792-unsplash.jpg" alt="slidebg2" data-bgfit="cover" data-bgposition="center center"
+                            <img src="new/home-bg.jpg" alt="slidebg2" data-bgfit="cover" data-bgposition="center center"
                                 data-bgrepeat="no-repeat">
                             <!-- LAYERS -->
                             <div class="tp-caption mediumlarge_light_white_center sft tp-resizeme slider" data-x="center"
@@ -116,7 +116,7 @@
                         </li>
                         <li data-transition="fade" data-slotamount="5" data-masterspeed="700">
                             <!-- MAIN IMAGE -->
-                            <img src="new/freestocks-org-65291-unsplash.jpg" alt="slidebg1" data-bgfit="cover" data-bgposition="center center"
+                            <img src="new/gage-walker-728792-unsplash.jpg" alt="slidebg1" data-bgfit="cover" data-bgposition="center center"
                                 data-bgrepeat="no-repeat" background-size=100%100%>
                             <!-- LAYERS -->
                             <div class="tp-caption mediumlarge_light_white_center sft tp-resizeme slider" data-x="center"
@@ -156,7 +156,7 @@
                                 data-y="360" data-speed="500" data-start="800" data-easing="Power4.easeOut" data-endspeed="300"
                                 data-endeasing="Power1.easeIn" data-captionhidden="off" style="z-index: 6">
                                 <a href="#" class="text-white m-r-10">o contactanos</a>
-                            </div>   
+                            </div>
                         </li>
                     </ul>
                     <div class="tp-bannertimer">
