--- a/index.html
+++ b/index.html
@@ -81,10 +81,8 @@
                         <div class="navbar-collapse collapse">
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="tour.html">Tour</a></li>
-                                <li><a href="pricing.html">Pricing</a></li>
-                                <li><a href="portfolio.html">Portfolio</a></li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="publicaciones.html">Portfolio</a></li>
+                                <li><a href="contacto.html">Contact</a></li>
                             </ul>
                         </div>
                         <!--/.nav-collapse -->
