--- a/index.html
+++ b/index.html
@@ -52,11 +52,9 @@
                         </div>
                         <div class="navbar-collapse collapse">
                             <ul class="nav navbar-nav navbar-right">
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="tour.html">Tour</a></li>
-                                <li><a href="pricing.html">Pricing</a></li>
-                                <li><a href="portfolio.html">Portfolio</a></li>
-                                <li><a href="contact.html">Contact</a></li>
+                              <li><a href="index.html">Indice</a></li>
+                              <li><a href="portfolio.html">Publicaciones</a></li>
+                              <li><a href="contact.html">Contacto</a></li>
                             </ul>
                         </div>
                         <!--/.nav-collapse -->
@@ -80,9 +78,9 @@
                         </div>
                         <div class="navbar-collapse collapse">
                             <ul class="nav navbar-nav navbar-right">
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="publicaciones.html">Portfolio</a></li>
-                                <li><a href="contacto.html">Contact</a></li>
+                                <li><a href="index.html">Indice</a></li>
+                                <li><a href="publicaciones.html">Publicaciones</a></li>
+                                <li><a href="contacto.html">Contacto</a></li>
                             </ul>
                         </div>
                         <!--/.nav-collapse -->
