--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="assets/plugins/headereffects/css/normalize.css" />
     <link href="assets/plugins/pace/pace-theme-flash.css" rel="stylesheet" type="text/css"
         media="screen" />
+    <link href="https://fonts.googleapis.com/css?family=Kalam|Noto+Serif+SC|Patrick+Hand|Roboto+Slab" rel="stylesheet">
     <!-- BEGIN CORE CSS FRAMEWORK -->
     <link href="assets/plugins/boostrapv3/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="assets/plugins/boostrapv3/css/bootstrap-theme.min.css" rel="stylesheet"
@@ -94,7 +95,7 @@
                         <!-- SLIDE  -->
                         <li data-transition="fade" data-slotamount="5" data-masterspeed="700">
                             <!-- MAIN IMAGE -->
-                            <img src="new/home-bg.jpg" alt="slidebg2" data-bgfit="cover" data-bgposition="center center"
+                            <img src="new/home-bg.jpg"  alt="slidebg2" data-bgfit="cover" data-bgposition="center center"
                                 data-bgrepeat="no-repeat">
                             <!-- LAYERS -->
                             <div class="tp-caption mediumlarge_light_white_center sft tp-resizeme slider" data-x="center"
@@ -104,10 +105,25 @@
                                     Aprende<br>
                                     De la manera correcta!</h2>
                             </div>
-                            <div class="tp-caption sfb slider tp-resizeme slider" data-x="center" data-hoffset="0"
+                            <div class="tp-caption sfb slider tp-resizeme slider" data-x="710" data-hoffset="0"
                                 data-y="300" data-speed="800" data-start="1000" data-easing="Power4.easeOut"
                                 data-endspeed="300" data-endeasing="Power1.easeIn" data-captionhidden="off" style="z-index: 6">
                                 <a href="#" class="btn btn-info btn-lg  btn-large m-r-10">Sobre nosotros</a>
+                            </div>
+                            <div class="tp-caption sfb slider tp-resizeme slider" data-x="250" data-hoffset="0"
+                                data-y="300" data-speed="800" data-start="1000" data-easing="Power4.easeOut"
+                                data-endspeed="300" data-endeasing="Power1.easeIn" data-captionhidden="off" style="z-index: 6">
+                                <a href="#" class="btn btn-info btn-lg  btn-large m-r-10">Publicaciones</a>
+                            </div>
+                            <div class="tp-caption sfb slider tp-resizeme slider" data-x="center" data-hoffset="0"
+                                data-y="300" data-speed="800" data-start="1000" data-easing="Power4.easeOut"
+                                data-endspeed="300" data-endeasing="Power1.easeIn" data-captionhidden="off" style="z-index: 6">
+                                <a href="#" class="btn btn-info btn-lg  btn-large m-r-10">Videos</a>
+                            </div>
+                            <div class="tp-caption fade slider tp-resizeme slider" data-x="center" data-hoffset="0"
+                                data-y="360" data-speed="500" data-start="800" data-easing="Power4.easeOut" data-endspeed="300"
+                                data-endeasing="Power1.easeIn" data-captionhidden="off" style="z-index: 6">
+                                <a href="#" class="text-white m-r-10">o contactanos</a>
                             </div>
                         </li>
                         <li data-transition="fade" data-slotamount="5" data-masterspeed="700">
@@ -124,11 +140,6 @@
                                     <br />
                                     Publicaciones semanales</h2>
                             </div>
-                            <div class="tp-caption sfb slider tp-resizeme slider" data-x="center" data-hoffset="0"
-                                data-y="320" data-speed="800" data-start="1000" data-easing="Power4.easeOut"
-                                data-endspeed="300" data-endeasing="Power1.easeIn" data-captionhidden="off" style="z-index: 6">
-                                <a href="#" class="btn btn-info btn-lg  btn-large m-r-10">Publicaciones</a>
-                            </div>
                         </li>
                         <!-- SLIDE  -->
                         <li data-transition="fade" data-slotamount="5" data-masterspeed="700">
@@ -142,16 +153,6 @@
                                 <h2 class="text-white custom-font title ">
                                     Conocenos<br>
                                     Aprende con nosotros</h2>
-                            </div>
-                            <div class="tp-caption sfb slider tp-resizeme slider" data-x="center" data-hoffset="0"
-                                data-y="300" data-speed="800" data-start="1000" data-easing="Power4.easeOut"
-                                data-endspeed="300" data-endeasing="Power1.easeIn" data-captionhidden="off" style="z-index: 6">
-                                <a href="#" class="btn btn-info btn-lg  btn-large m-r-10">Videos</a>
-                            </div>
-                            <div class="tp-caption fade slider tp-resizeme slider" data-x="center" data-hoffset="0"
-                                data-y="360" data-speed="500" data-start="800" data-easing="Power4.easeOut" data-endspeed="300"
-                                data-endeasing="Power1.easeIn" data-captionhidden="off" style="z-index: 6">
-                                <a href="#" class="text-white m-r-10">o contactanos</a>
                             </div>
                         </li>
                     </ul>
