--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                     Aprende<br>
                                     De la manera correcta!</h2>
                             </div>
-                            <div class="tp-caption sfb slider tp-resizeme slider" data-x="750" data-hoffset="0"
+                            <div class="tp-caption sfb slider tp-resizeme slider" data-x="740" data-hoffset="0"
                                 data-y="300" data-speed="800" data-start="1000" data-easing="Power4.easeOut"
                                 data-endspeed="300" data-endeasing="Power1.easeIn" data-captionhidden="off" style="z-index: 6">
                                 <a href="#" class="btn btn-info btn-lg  btn-large m-r-10">Sobre nosotros</a>
@@ -151,7 +151,7 @@
                                 data-hoffset="0" data-y="120" data-speed="500" data-start="800" data-easing="Power4.easeOut"
                                 data-endspeed="300" data-endeasing="Power1.easeIn" data-captionhidden="off" style="z-index: 6">
                                 <h2 class="text-white custom-font title ">
-                                    Conocenos<br>
+                                    Conocenos <br>Y<br>
                                     Aprende con nosotros</h2>
                             </div>
                         </li>
