--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <meta charset="utf-8" />
-    <title>thempleite - Responsive Website Template</title>
+    <title>InglesAI-Contacto</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta content="" name="description" />
     <meta content="" name="author" />
@@ -43,11 +43,9 @@
                     </div>
                     <div class="navbar-collapse collapse">
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="tour.html">Tour</a></li>
-                            <li><a href="pricing.html">Pricing</a></li>
-                            <li><a href="portfolio.html">Portfolio</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="index.html">Indice</a></li>
+                            <li><a href="publicaciones.html">Publicaciones</a></li>
+                            <li><a href="contacto.html">Contacto</a></li>
                         </ul>
                     </div>
                     <!--/.nav-collapse -->
@@ -56,10 +54,9 @@
         </div>
         <div class="section grey text-center m-t-60 p-t-40 p-b-40" id="banner-footer">
             <h2 class="normal m-b-10">
-                We would love to hear from you</h2>
+                Nos Encanctaria conocer tus opiniones</h2>
             <p>
-                Why not drop us a line or pick up the phone and give us a shout. Our team would
-                love to talk to you and find ways of Making Business Easy.</p>
+                Dejanos un comentario para que podamos conocer tus opiniones sobre cualquier tema. Danos tus ideas para mejorar y ayudanos a mejorar.</p>
         </div>
         <div class="section white">
             <div class="container">
@@ -70,62 +67,45 @@
                             <div class="row form-row">
                                 <div class="col-md-10">
                                     <input name="txtFirstName" id="textFirstName" type="text" class="form-control "
-                                        placeholder="First Name">
+                                        placeholder="Nombre">
                                 </div>
                             </div>
                             <div class="row form-row">
                                 <div class="col-md-10">
-                                    <input name="txtLastName" id="txtLastName" type="text" class="form-control" placeholder="Last Name">
-                                </div>
-                            </div>
-                            <div class="row form-row">
-                                <div class="col-md-10">
-                                    <input name="txtCompany" id="txtCompany" type="text" class="form-control" placeholder="Company/Orgarnization">
+                                    <input name="txtLastName" id="txtLastName" type="text" class="form-control" placeholder="Apellido">
                                 </div>
                             </div>
                             <div class="row form-row">
                                 <div class="col-md-10">
                                     <input name="txtEmailAddress" id="txtEmailAddress" type="text" class="form-control"
-                                        placeholder="Email address">
+                                        placeholder="Dirección Email">
                                 </div>
                             </div>
                             <div class="row form-row">
                                 <div class="col-md-10">
-                                    <textarea id="txtDesc" name="txtMessage" type="text" class="form-control" placeholder="Message" rows="8">
-						
+                                    <textarea id="txtDesc" name="txtMessage" type="text" class="form-control" placeholder="Mensaje" rows="8">
+
 						</textarea>
                                 </div>
                             </div>
                             <div class="row form-row">
                                 <div class="col-md-10">
                                     <button type="button" id="button-send" class="btn btn-primary btn-cons">
-                                        Send</button>
+                                        Enviar</button>
                                 </div>
-								<div id="success">Your message has been successfully!</div>
-								<div id="error">Unable to send your message, please try later.</div>
+								<div id="success">Tu mensaje fue enviado Exitosamente!</div>
+								<div id="error">Error al enviar, intentalo mas tarde.</div>
                             </div>
 						</form>
                         </div>
                         <div class="col-md-6 feature-list">
                             <h4 class="title custom-font text-black no-margin p-b-10">
-                                TELEPHONE</h4>
-                            <p class="no-margin">
-                                Sales</p>
-                            <h2 class="custom-font text-black no-margin">
-                                (123) 456-7890</h2>
-                            <p class="no-margin">
-                                Technical</p>
-                            <h2 class="custom-font text-black no-margin">
-                                (111) 111-2233</h2>
                             <section class="p-t-20 p-b-20">
                                 <h4 class="title custom-font text-black">
                                     ADDRESS</h4>
                                 <ul class="address-list">
-                                    <li><i class="fa fa-map-marker"></i><strong>Address:</strong> 1234 Street Name, City
-                                        Name, United States</li>
-                                    <li><i class="fa fa-phone"></i><strong>Phone:</strong> (123) 456-7890</li>
-                                    <li><i class="fa fa-envelope"></i><strong>Email:</strong> <a href="mailto:mail@example.com">
-                                        mail@example.com</a></li>
+                                    <li><i class="fa fa-envelope"></i><strong>Email:</strong> <a href="inglesai26@gmail.com">
+                                        InglesAI26@gmail.com</a></li>
                                 </ul>
                             </section>
                         </div>
@@ -133,55 +113,23 @@
                 </div>
             </div>
         </div>
-        <div class="section white" style="height: 350px" id="map">
-        </div>
         <div class="section grey">
             <div class="container">
                 <div class="p-t-60 p-b-50">
                     <div id="testomonials" class="owl-carousel row">
                         <div class="item">
-                            <div class="col-md-6  col-md-offset-3 text-center">
-                                <div class="testimonial-thumb">
-                                    <img src="assets/img/testimonial_img1.png" alt="testimonal">
-                                </div>
-                                <div class="testimonial-user">
-                                    <span>John Donga</span> Greepit.com
-                                </div>
-                                <h3 class="normal text-center">
-                                    I have always received good service from the Frittt Templates. Timing and quality
-                                    have always met my expectations and everything is communicated in a professional
-                                    and timely manner.
-                                </h3>
-                            </div>
                         </div>
                         <div class="item">
                             <div class="col-md-6   col-md-offset-3 text-center">
                                 <div class="testimonial-thumb">
                                     <img src="assets/img/testimonial_img2.png" alt="testimonal">
                                 </div>
-                                <div class="testimonial-user">
-                                    <span>John Donga</span> Frittt.com
-                                </div>
-                                <h3 class="normal text-center">
-                                    We consider the Frittt Templates team a development partner who has proven to be
-                                    creative in problem resolution, reliable in time commitments, and overall consistent
-                                    in meeting our expectations.
-                                </h3>
-                            </div>
                         </div>
                         <div class="item">
                             <div class="col-md-6   col-md-offset-3 text-center">
                                 <div class="testimonial-thumb">
                                     <img src="assets/img/testimonial_img3.png" alt="testimonal">
                                 </div>
-                                <div class="testimonial-user">
-                                    <span>John Donga</span> www.Frittt.com
-                                </div>
-                                <h3 class="semi-bold text-center">
-                                    The work was above and beyond what I could have expected. Excellent service all
-                                    the way around from start to finish. Keep up the GREAT work! Great job!
-                                </h3>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -191,15 +139,6 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-3 text-center">
-                        <div class="services-box-3">
-                            <i class="fa fa-phone"></i>
-                            <div class="content">
-                                <p>
-                                    Phone</p>
-                                <h3>
-                                    +1 555 666 9999</h3>
-                            </div>
-                        </div>
                     </div>
                     <div class="col-md-3 text-center">
                         <div class="services-box-3">
@@ -208,31 +147,13 @@
                                 <p>
                                     E-mail</p>
                                 <h3>
-                                    letstalk@thempleite.com</h3>
+                                    InglesAI26@gmail.com</h3>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-3 text-center">
-                        <div class="services-box-3">
-                            <i class="fa fa-map-marker "></i>
-                            <div class="content">
-                                <p>
-                                    Postal</p>
-                                <h3>
-                                    32-Grey Suite, NY</h3>
-                            </div>
-                        </div>
                     </div>
                     <div class="col-md-3 text-center">
-                        <div class="services-box-3">
-                            <i class="fa fa-pinterest-square"></i>
-                            <div class="content">
-                                <p>
-                                    Pinterest</p>
-                                <h3>
-                                    pinterest.com/frittt</h3>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -244,40 +165,22 @@
                         <div class="col-md-2 col-lg-2 col-sm-2 col-xs-12 xs-m-b-20">
                             <img src="assets/img/logo_condensed.png" alt="" data-src="assets/img/logo_condensed.png"
                                 data-src-retina="assets/img/logo2x.png" width="119" height="22" />
-                            <br />
-                            <br />
-                            © Frittt Templates.
-                            <br />
-                            All Rights Reserved.
                         </div>
                         <div class="col-md-4 col-lg-3 col-sm-4  col-xs-12 xs-m-b-20">
-                            <address class="xs-no-padding  col-md-6 col-lg-6 col-sm-6  col-xs-12">
-                                32 - Grey Suite<br>
-                                Odd Street,<br>
-                                NY, USA.
-                            </address>
                             <div class="xs-no-padding col-md-6 col-lg-6 col-sm-6">
-                                <div>
-                                    (1) 555 666 9999</div>
-                                <a href="javascript:">letstalk@thempleite.com</a>
+                                <a href="javascript:">InglesAI26@gmail.com</a>
                             </div>
                             <div class="clearfix">
                             </div>
                         </div>
                         <div class="col-md-2 col-lg-2 col-sm-2  col-xs-12 xs-m-b-20">
-                            <div class="bold">
-                                We Are Hiring</div>
-                            Send you resume at <a href="javascript:">careers@thempleite.com</a>
                         </div>
                         <div class="col-md-2 col-lg-2 col-sm-2  col-xs-12 ">
                             <div class="bold">
-                                FOLLOW US</div>
+                                Siguenos</div>
                             <br />
-                            <a href="javascript:"><i class="fa fa-facebook fa-2x"></i></a>&nbsp; <a href="javascript:">
-                                <i class="fa fa-twitter fa-2x"></i></a>&nbsp; <a href="javascript:"><i class="fa fa-youtube-play  fa-2x">
-                                </i></a>&nbsp; <a href="javascript:"><i class="fa fa-github fa-2x"></i></a>&nbsp;
-                            <a href="javascript:"><i class="fa fa-dribbble fa-2x"></i></a>&nbsp; <a href="javascript:">
-                                <i class="fa fa-pinterest fa-2x"></i></a>
+                            <a href="https://www.facebook.com/InglesAI/?ref=bookmarks"><i class="fa fa-facebook fa-2x"></i></a>&nbsp; <a href="https://www.youtube.com/channel/UCXuu2CCwbb_NxwJk7dUCdNg"><i class="fa fa-youtube-play  fa-2x">
+                                </i></a>
                         </div>
                     </div>
                 </div>
@@ -297,6 +200,6 @@
     <!-- END JS PLUGIN -->
     <script src="assets/js/google_maps.js" type="text/javascript"></script>
     <script type="text/javascript" src="assets/js/core.js"></script>
-  
+
 </body>
 </html>
