--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                         <div class="navbar-collapse collapse">
                             <ul class="nav navbar-nav navbar-right">
                               <li><a href="index.html">Indice</a></li>
-                              <li><a href="portfolio.html">Publicaciones</a></li>
-                              <li><a href="contact.html">Contacto</a></li>
+                              <li><a href="publicaciones.html">Publicaciones</a></li>
+                              <li><a href="contacto.html">Contacto</a></li>
                             </ul>
                         </div>
                         <!--/.nav-collapse -->
@@ -106,7 +106,7 @@
                                     De la manera correcta!</h2>
                             </div>
                             <div class="tp-caption sfb slider tp-resizeme slider" data-x="740" data-hoffset="0"
-                                data-y="300" data-speed="800" data-start="1000" data-easing="Power4.easeOut"
+                                data-y="300" data-speed="500" data-start="1000" data-easing="Power4.easeOut"
                                 data-endspeed="300" data-endeasing="Power1.easeIn" data-captionhidden="off" style="z-index: 6">
                                 <a href="#" class="btn btn-info btn-lg  btn-large m-r-10">Sobre nosotros</a>
                             </div>
@@ -163,7 +163,7 @@
             <!--END SLIDER
 
 	-->
-      
+
     <script src="assets/plugins/boostrapv3/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="assets/plugins/pace/pace.min.js" type="text/javascript"></script>
     <script src="assets/plugins/jquery-unveil/jquery.unveil.min.js" type="text/javascript"></script>
