--- a/contacto.html
+++ b/contacto.html
@@ -168,7 +168,7 @@
                         </div>
                         <div class="col-md-4 col-lg-3 col-sm-4  col-xs-12 xs-m-b-20">
                             <div class="xs-no-padding col-md-6 col-lg-6 col-sm-6">
-                                <a href="javascript:">InglesAI26@gmail.com</a>
+                                <a href="InglesAI26@gmail.com">InglesAI26@gmail.com</a>
                             </div>
                             <div class="clearfix">
                             </div>
