--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             <div class="tp-caption sfb slider tp-resizeme slider" data-x="250" data-hoffset="0"
                                 data-y="300" data-speed="800" data-start="1000" data-easing="Power4.easeOut"
                                 data-endspeed="300" data-endeasing="Power1.easeIn" data-captionhidden="off" style="z-index: 6">
-                                <a href="#" class="btn btn-info btn-lg  btn-large m-r-10">Publicaciones</a>
+                                <a href="publicaciones.html" class="btn btn-info btn-lg  btn-large m-r-10">Publicaciones</a>
                             </div>
                             <div class="tp-caption sfb slider tp-resizeme slider" data-x="center" data-hoffset="0"
                                 data-y="300" data-speed="800" data-start="1000" data-easing="Power4.easeOut"
@@ -123,7 +123,7 @@
                             <div class="tp-caption fade slider tp-resizeme slider" data-x="center" data-hoffset="0"
                                 data-y="360" data-speed="500" data-start="800" data-easing="Power4.easeOut" data-endspeed="300"
                                 data-endeasing="Power1.easeIn" data-captionhidden="off" style="z-index: 6">
-                                <a href="#" class="text-white m-r-10">o contactanos</a>
+                                <a href="contacto.html" class="text-white m-r-10">o contactanos</a>
                             </div>
                         </li>
                         <li data-transition="fade" data-slotamount="5" data-masterspeed="700">
