--- a/Videos.html
+++ b/Videos.html
@@ -25,8 +25,8 @@
     <link href="assets/css/magic_space.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/responsive.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/animate.min.css" rel="stylesheet" type="text/css" />
-		<link rel="stylesheet" type="text/js" href="videos.js">
-		<script src="videos.js"></script>
+		<script src="//www.powr.io/powr.js?external-type=html"></script>
+ <div class="powr-video-gallery" id="7353bdd8_1544737149"></div>
     <!-- END CSS TEMPLATE -->
 </head>
 
@@ -50,6 +50,7 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li><a href="index.html">Indice</a></li>
                             <li><a href="publicaciones.html">Publicaciones</a></li>
+														<li><a href="videos.html">Videos<a/></li>
                             <li><a href="contacto.html">Contacto</a></li>
                         </ul>
                     </div>
