--- a/contacto.html
+++ b/contacto.html
@@ -45,6 +45,7 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li><a href="index.html">Indice</a></li>
                             <li><a href="publicaciones.html">Publicaciones</a></li>
+                            <li><a href="videos.html">Videos<a/></li>
                             <li><a href="contacto.html">Contacto</a></li>
                         </ul>
                     </div>
