--- a/videos.html
+++ b/videos.html
@@ -63,7 +63,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <h2>
-                                    Publicaciones</h2>
+                                    Videos</h2>
                             </div>
                         </div>
                     </div>
