--- a/videos.html
+++ b/videos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <meta charset="utf-8" />
@@ -26,6 +26,15 @@
     <link href="assets/css/responsive.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/animate.min.css" rel="stylesheet" type="text/css" />
     <!-- END CSS TEMPLATE -->
+    <!--nueva baina-->
+    <meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="shortcut icon" href="favicon.ico">
+<link rel="stylesheet" href="css/main.css">
+<link href='https://fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" type="text/css" href="videos.css" />
+<script type="text/javascript" src="videos.js"></script>
 </head>
 
 <!-- END HEAD -->
@@ -70,14 +79,98 @@
                     <div class="clearfix">
                     </div>
 										<!-- Hidden video div -->
-										<script src="//www.powr.io/powr.js?external-type=html"></script>
- <div class="powr-video-gallery" id="7353bdd8_1544737149"></div>
+
+ <section class="second clearfix">
+  <article class="video">
+    <figure>
+    <a class="fancybox fancybox.iframe" href="https://www.youtube.com/embed/iRaQ4G9xEqw"><img class="videoThumb" src="new/mi-pham-223464-unsplash.jpg"></a>
+    </figure>
+    <h3 class="videoTitle">#1 Pronombres personales</h3>
+  </article>
+
+  <article class="video">
+    <figure>
+    <a class="fancybox fancybox.iframe" href="#"><img class="videoThumb" src="new/meta.png"></a>
+    </figure>
+    <h3 class="videoTitle"></h3>
+  </article>
+
+  <article class="video">
+    <figure>
+    <a class="fancybox fancybox.iframe" href="#"><img class="videoThumb" src="new/meta.png"></a>
+    </figure>
+    <h3 class="videoTitle"></h3>
+  </article>
+
+  <article class="video">
+    <figure>
+    <a class="fancybox fancybox.iframe" href="#"><img class="videoThumb" src="new/meta.png"></a>
+    </figure>
+    <h3 class="videoTitle"></h3>
+  </article>
+
+  <article class="video">
+    <figure>
+    <a class="fancybox fancybox.iframe" href="#"><img class="videoThumb" src="new/meta.png"></a>
+    </figure>
+    <h3 class="videoTitle"></h3>
+  </article>
+
+  <article class="video">
+    <figure>
+    <a class="fancybox fancybox.iframe" href="#"><img class="videoThumb" src="new/meta.png"></a>
+    </figure>
+    <h3 class="videoTitle"></h3>
+  </article>
+
+  <article class="video">
+    <figure>
+    <a class="fancybox fancybox.iframe" href="#"><img class="videoThumb" src="new/meta.png"></a>
+    </figure>
+    <h3 class="videoTitle"></h3>
+  </article>
+
+  <article class="video">
+    <figure>
+    <a class="fancybox fancybox.iframe" href="#"><img class="videoThumb" src="new/meta.png"></a>
+    </figure>
+    <h3 class="videoTitle"></h3>
+  </article>
+
+  <article class="video">
+    <figure>
+    <a class="fancybox fancybox.iframe" href="#"><img class="videoThumb" src="new/meta.png"></a>
+    </figure>
+    <h3 class="videoTitle"></h3>
+  </article>
+
+  <article class="video">
+    <figure>
+    <a class="fancybox fancybox.iframe" href="#"><img class="videoThumb" src="new/meta.png"></a>
+    </figure>
+    <h3 class="videoTitle"></h3>
+  </article>
+
+  <article class="video">
+    <figure>
+    <a class="fancybox fancybox.iframe" href="#"><img class="videoThumb" src="new/meta.png"></a>
+    </figure>
+    <h3 class="videoTitle"></h3>
+  </article>
+
+  <article class="video">
+    <figure>
+    <a class="fancybox fancybox.iframe" href="#"><img class="videoThumb" src="new/meta.png"></a>
+    </figure>
+    <h3 class="videoTitle"></h3>
+  </article>
+</section>
+
 
         <div class="section grey">
             <div class="container">
                 <div class="p-t-60 p-b-50">
-                    <div id="testomonials" class="owl-carousel row">
-                        <div class="item">
+                    <div id="testomonials" class="owl-carousel row">                        <div class="item">
                             <div class="col-md-6  col-md-offset-3 text-center">
                                 <div class="testimonial-thumb">
                                     <img src="assets/img/testimonial_img1.png" alt="testimonal">
@@ -226,5 +319,24 @@
     <script type="text/javascript" src="assets/plugins/jquery-isotope/jquery.isotope.js"></script>
     <!-- END JS PLUGIN -->
     <script type="text/javascript" src="assets/js/core.js"></script>
+  </section>
+
+  <section class="third">
+    <header>
+      <h1>First write the HTML</h1>
+    </header>
+
+  </section>
+
 </body>
+
+<footer>
+  <p>Simple Responsive Video Gallery by <a href="https://codepen.io/fask153" target="_blank">hassn youssef</a><p>
+  <p>Use it • Change it • Make something cool with it</p>
+</footer>
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
+<script src="js/jquery.fancybox.min.js"></script>
+<script src="js/global.min.js"></script>
+
 </html>
