--- a/videos.html
+++ b/videos.html
@@ -84,7 +84,7 @@
                 </div>
         </div>
             					<!-- Hidden video div -->
-
+<section>
                     <div class="grid-row reverse video-gallery">
  <input type="radio" value="1" name="video-list" id="video-1" checked="checked" /><label for="video-1">Capitulo 1</label>
  <input type="radio" value="2" name="video-list" id="video-2" /><label for="video-2">Capitulo 2</label>
@@ -138,7 +138,7 @@
  </div>
  <!-- videos -->
 </div>
-
+</selection>
                     <!-- videos -->
 
         <div class="section grey">
