--- a/videos.html
+++ b/videos.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
+﻿<!DOCTYPE html>
+<html>
 <head>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <meta charset="utf-8" />
-    <title>InglesAI-videos</title>
+    <title>InglesAI</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta content="" name="description" />
     <meta content="" name="author" />
@@ -25,24 +25,11 @@
     <link href="assets/css/magic_space.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/responsive.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/animate.min.css" rel="stylesheet" type="text/css" />
+
+
+    <link rel="stylesheet" type="text/css" href="videos.css" />
     <!-- END CSS TEMPLATE -->
-    <!--nueva baina-->
-
-<link rel="stylesheet" type="text/css" href="videos.css" />
-
-
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="shortcut icon" href="favicon.ico">s
-<link rel="stylesheet" href="css/main.css">
-
-<!--[if lt IE 9]>
-<script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
-
 </head>
-
 <!-- END HEAD -->
 <body>
     <div class="main-wrapper">
@@ -61,9 +48,9 @@
                     </div>
                     <div class="navbar-collapse collapse">
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="index.html">Indice</a></li>
+                            <li><a href="index.html">Inicio</a></li>
                             <li><a href="publicaciones.html">Publicaciones</a></li>
-														<li><a href="videos.html">Videos<a/></li>
+                            <li><a href="videos.html">Videos</a></li>
                             <li><a href="contacto.html">Contacto</a></li>
                         </ul>
                     </div>
@@ -83,125 +70,119 @@
                     </div>
                 </div>
         </div>
-            					<!-- Hidden video div -->
-<div class="section white">
-                    <div class="grid-row reverse video-gallery">
- <input type="radio" value="1" name="video-list" id="video-1" checked="checked" /><label for="video-1">Capitulo 1</label>
- <input type="radio" value="2" name="video-list" id="video-2" /><label for="video-2">Capitulo 2</label>
- <input type="radio" value="3" name="video-list" id="video-3" /><label for="video-3">Capitulo 3</label>
- <input type="radio" value="4" name="video-list" id="video-4" /><label for="video-4">Capitulo 4</label>
- <input type="radio" value="5" name="video-list" id="video-5" /><label for="video-5">Capitulo 5</label>
- <input type="radio" value="6" name="video-list" id="video-6" /><label for="video-6">Capitulo 6</label>
- <input type="radio" value="7" name="video-list" id="video-7" /><label for="video-7">Capitulo 7</label>
- <input type="radio" value="8" name="video-list" id="video-8" /><label for="video-8">Capitulo 8</label>
- <input type="radio" value="9" name="video-list" id="video-9" /><label for="video-9">Capitulo 9</label>
- <input type="radio" value="10" name="video-list" id="video-10" /><label for="video-10">Capitulo 10</label>
+        <div class="grid-row reverse video-gallery">
+          <input type="radio" value="1" name="video-list" id="video-1" checked="checked" /><label for="video-1">Capitulo 1</label>
+          <input type="radio" value="2" name="video-list" id="video-2" /><label for="video-2">Capitulo 2</label>
+          <input type="radio" value="3" name="video-list" id="video-3" /><label for="video-3">Capitulo 3</label>
+          <input type="radio" value="4" name="video-list" id="video-4" /><label for="video-4">Capitulo 4</label>
+          <input type="radio" value="5" name="video-list" id="video-5" /><label for="video-5">Capitulo 5</label>
+          <input type="radio" value="6" name="video-list" id="video-6" /><label for="video-6">Capitulo 6</label>
+          <input type="radio" value="7" name="video-list" id="video-7" /><label for="video-7">Capitulo 7</label>
+          <input type="radio" value="8" name="video-list" id="video-8" /><label for="video-8">Capitulo 8</label>
+          <input type="radio" value="9" name="video-list" id="video-9" /><label for="video-9">Capitulo 9</label>
+          <input type="radio" value="10" name="video-list" id="video-10" /><label for="video-10">Capitulo 10</label>
 
- <!-- videos -->
- <div class="video video-1">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/iRaQ4G9xEqw" frameborder="0" allowfullscreen></iframe>
- </div>
+          <!-- videos -->
+          <div class="video video-1">
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/iRaQ4G9xEqw" frameborder="0" allowfullscreen></iframe>
+          </div>
 
- <div class="video video-2">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/9zKNolqsRUw" frameborder="0" allowfullscreen></iframe>
- </div>
+          <div class="video video-2">
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/9zKNolqsRUw" frameborder="0" allowfullscreen></iframe>
+          </div>
 
- <div class="video video-3">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/3I-EMFzp9AY" frameborder="0" allowfullscreen></iframe>
- </div>
+          <div class="video video-3">
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/3I-EMFzp9AY" frameborder="0" allowfullscreen></iframe>
+          </div>
 
- <div class="video video-4">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/f9eKUdWRDeE" frameborder="0" allowfullscreen></iframe>
- </div>
+          <div class="video video-4">
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/f9eKUdWRDeE" frameborder="0" allowfullscreen></iframe>
+          </div>
 
- <div class="video video-5">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/UNjfoBkXqHw" frameborder="0" allowfullscreen></iframe>
- </div>
+          <div class="video video-5">
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/UNjfoBkXqHw" frameborder="0" allowfullscreen></iframe>
+          </div>
 
- <div class="video video-6">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/QUQhdge2VRg" frameborder="0" allowfullscreen></iframe>
- </div>
+          <div class="video video-6">
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/QUQhdge2VRg" frameborder="0" allowfullscreen></iframe>
+          </div>
 
- <div class="video video-7">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/qicU-vCLw_w" frameborder="0" allowfullscreen></iframe>
- </div>
+          <div class="video video-7">
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/qicU-vCLw_w" frameborder="0" allowfullscreen></iframe>
+          </div>
 
- <div class="video video-8">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/1Hee6OyZemk" frameborder="0" allowfullscreen></iframe>
- </div>
+          <div class="video video-8">
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/1Hee6OyZemk" frameborder="0" allowfullscreen></iframe>
+          </div>
 
- <div class="video video-9">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/-9ORfcFvjMc" frameborder="0" allowfullscreen></iframe>
- </div>
+          <div class="video video-9">
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/-9ORfcFvjMc" frameborder="0" allowfullscreen></iframe>
+          </div>
 
- <div class="video video-10">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/LhblTmnGeIk" frameborder="0" allowfullscreen></iframe>
- </div>
+          <div class="video video-10">
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/LhblTmnGeIk" frameborder="0" allowfullscreen></iframe>
+          </div>
  <!-- videos -->
 </div>
+<div class="section grey">
+    <div class="container">
+        <div class="p-t-60 p-b-50">
+
+        </div>
+    </div>
 </div>
+<div class="section black contact-details green-icons">
+    <div class="container">
+        <div class="row">
 
-                    <!-- videos -->
-
-        <div class="section grey">
-            <div class="container">
-                <div class="p-t-60 p-b-50">
-
+            <div class="col-md-3 text-center">
+                <div class="services-box-3">
+                    <i class="fa fa-envelope"></i>
+                    <div class="content">
+                        <p>
+                            E-mail</p>
+                        <h3>
+                            InglesAI26@gmail.com</h3>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="section black contact-details green-icons">
-            <div class="container">
-                <div class="row">
 
-                    <div class="col-md-3 text-center">
-                        <div class="services-box-3">
-                            <i class="fa fa-envelope"></i>
-                            <div class="content">
-                                <p>
-                                    E-mail</p>
-                                <h3>
-                                    InglesAI26@gmail.com</h3>
-                            </div>
-                        </div>
-                    </div>
+        </div>
+    </div>
+</div>
+<div class="section white footer">
+    <div class="container">
+        <div class="p-t-30 p-b-50">
+            <div class="row">
+                <div class="col-md-2 col-lg-2 col-sm-2 col-xs-12 xs-m-b-20">
+                    <img src="assets/img/logo_condensed.png" alt="" data-src="assets/img/logo_condensed.png"
+                        data-src-retina="assets/img/logo2x.png" width="119" height="22" />
 
                 </div>
-            </div>
-        </div>
-        <div class="section white footer">
-            <div class="container">
-                <div class="p-t-30 p-b-50">
-                    <div class="row">
-                        <div class="col-md-2 col-lg-2 col-sm-2 col-xs-12 xs-m-b-20">
-                            <img src="assets/img/logo_condensed.png" alt="" data-src="assets/img/logo_condensed.png"
-                                data-src-retina="assets/img/logo2x.png" width="119" height="22" />
+                <div class="col-md-4 col-lg-3 col-sm-4  col-xs-12 xs-m-b-20">
 
-                        </div>
-                        <div class="col-md-4 col-lg-3 col-sm-4  col-xs-12 xs-m-b-20">
+                    <div class="xs-no-padding col-md-6 col-lg-6 col-sm-6">
 
-                            <div class="xs-no-padding col-md-6 col-lg-6 col-sm-6">
-
-                                <a href="javascript:">InglesAI26@gmail.com</a>
-                            </div>
-                            <div class="clearfix">
-                            </div>
-                        </div>
-                        <div class="col-md-2 col-lg-2 col-sm-2  col-xs-12 ">
-                            <div class="bold">
-                                FOLLOW US</div>
-                            <br />
-                            <a href="javascript:"><i class="fa fa-facebook fa-2x"></i></a>&nbsp; <a href="javascript:">
-                                <i class="fa fa-twitter fa-2x"></i></a>&nbsp; <a href="javascript:"><i class="fa fa-youtube-play  fa-2x">
-                                </i></a>&nbsp; <a href="javascript:"><i class="fa fa-github fa-2x"></i></a>&nbsp;
-                            <a href="javascript:"><i class="fa fa-dribbble fa-2x"></i></a>&nbsp; <a href="javascript:">
-                                <i class="fa fa-pinterest fa-2x"></i></a>
-                        </div>
+                        <a href="javascript:">InglesAI26@gmail.com</a>
                     </div>
+                    <div class="clearfix">
+                    </div>
+                </div>
+                <div class="col-md-2 col-lg-2 col-sm-2  col-xs-12 ">
+                    <div class="bold">
+                        FOLLOW US</div>
+                    <br />
+                    <a href="javascript:"><i class="fa fa-facebook fa-2x"></i></a>&nbsp; <a href="javascript:">
+                        <i class="fa fa-twitter fa-2x"></i></a>&nbsp; <a href="javascript:"><i class="fa fa-youtube-play  fa-2x">
+                        </i></a>&nbsp; <a href="javascript:"><i class="fa fa-github fa-2x"></i></a>&nbsp;
+                    <a href="javascript:"><i class="fa fa-dribbble fa-2x"></i></a>&nbsp; <a href="javascript:">
+                        <i class="fa fa-pinterest fa-2x"></i></a>
                 </div>
             </div>
         </div>
     </div>
+</div>
+</div>
     <!-- BEGIN CORE JS FRAMEWORK -->
     <script type="text/javascript" src="assets/plugins/jquery-1.8.3.min.js"></script>
     <script src="assets/plugins/boostrapv3/js/bootstrap.min.js" type="text/javascript"></script>
@@ -209,18 +190,12 @@
     <!-- BEGIN JS PLUGIN -->
     <script src="assets/plugins/pace/pace.min.js" type="text/javascript"></script>
     <script src="assets/plugins/jquery-unveil/jquery.unveil.min.js" type="text/javascript"></script>
+    <script src="assets/plugins/owl-carousel/owl.carousel.min.js" type="text/javascript"></script>
     <script src="assets/plugins/modernizr.custom.js" type="text/javascript"></script>
     <script src="assets/plugins/waypoints.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="assets/plugins/parrallax/js/jquery.parallax-1.1.3.js"></script>
     <script type="text/javascript" src="assets/plugins/jquery-nicescroll/jquery.nicescroll.min.js"></script>
-    <script type="text/javascript" src="assets/plugins/jquery-isotope/jquery.isotope.js"></script>
     <!-- END JS PLUGIN -->
     <script type="text/javascript" src="assets/js/core.js"></script>
-
 </body>
-
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
-<script src="js/jquery.fancybox.min.js"></script>
-<script src="js/global.min.js"></script>
-
-
 </html>
