--- a/publicaciones.html
+++ b/publicaciones.html
@@ -47,6 +47,7 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li><a href="index.html">Indice</a></li>
                             <li><a href="publicaciones.html">Publicaciones</a></li>
+                            <li><a href="videos.html">Videos</a></li>
                             <li><a href="contacto.html">Contacto</a></li>
                         </ul>
                     </div>
