--- a/publicaciones.html
+++ b/publicaciones.html
@@ -1,7 +1,81 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+    <meta charset="utf-8" />
+    <title>InglesAI</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta content="" name="description" />
+    <meta content="" name="author" />
+    <link rel="stylesheet" type="text/css" href="assets/plugins/owl-carousel/owl.carousel.css" />
+    <link rel="stylesheet" type="text/css" href="assets/plugins/owl-carousel/owl.theme.css" />
+    <link rel="stylesheet" type="text/css" href="assets/plugins/headereffects/css/component.css">
+    <link rel="stylesheet" type="text/css" href="assets/plugins/headereffects/css/normalize.css" />
+    <link href="assets/plugins/pace/pace-theme-flash.css" rel="stylesheet" type="text/css"
+        media="screen" />
+    <!-- BEGIN CORE CSS FRAMEWORK -->
+    <link href="assets/plugins/boostrapv3/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="assets/plugins/boostrapv3/css/bootstrap-theme.min.css" rel="stylesheet"
+        type="text/css" />
+    <link href="assets/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet"
+        type="text/css" />
+    <!-- END CORE CSS FRAMEWORK -->
+    <!-- BEGIN CSS TEMPLATE -->
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/magic_space.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/responsive.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/animate.min.css" rel="stylesheet" type="text/css" />
+
+
+    <link rel="stylesheet" type="text/css" href="publicaciones.css" />
+    <script type="text/javascript" src="publicaciones.js" charset="utf-8"></script>
+
+    <!-- END CSS TEMPLATE -->
 <!-- google fonts-->
 <link href='https://fonts.googleapis.com/css?family=Leckerli+One|Metrophobic' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="publicaciones.css">
-<script type="text/javascript" src="publicaciones.js"></script>
+<link rel="stylesheet" type="text/css" href="publicaciones.css">
+
+</head>
+<!-- END HEAD -->
+<body>
+    <div class="main-wrapper">
+        <div role="navigation" class="navbar navbar-default navbar-static-top">
+            <div class="container">
+                <div class="compressed">
+                    <div class="navbar-header">
+                        <button data-target=".navbar-collapse" data-toggle="collapse" class="navbar-toggle"
+                            type="button">
+                            <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span><span
+                                class="icon-bar"></span><span class="icon-bar"></span>
+                        </button>
+                        <a href="#" class="navbar-brand compressed">
+                            <img src="assets/img/logo_condensed.png" alt="" data-src="assets/img/logo_condensed.png"
+                                data-src-retina="assets/img/logo2x.png" width="119" height="22" /></a>
+                    </div>
+                    <div class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="index.html">Inicio</a></li>
+                            <li><a href="publicaciones.html">Publicaciones</a></li>
+                            <li><a href="videos.html">Videos</a></li>
+                            <li><a href="contacto.html">Contacto</a></li>
+                        </ul>
+                    </div>
+                    <!--/.nav-collapse -->
+                </div>
+            </div>
+        </div>
+        <div class="section first white">
+                            <div class="section grey p-t-20  p-b-20 m-b-50">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h2>
+                                    publicaciones</h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </div>
 <a href="#" class="icon_list" data-js="list">
   <span>• -</span>
   <span>• -</span>
@@ -336,3 +410,77 @@
     </section>
   </div>
 </div>
+<div class="section grey">
+    <div class="container">
+        <div class="p-t-60 p-b-50">
+
+        </div>
+    </div>
+</div>
+<div class="section black contact-details green-icons">
+    <div class="container">
+        <div class="row">
+
+            <div class="col-md-3 text-center">
+                <div class="services-box-3">
+                    <i class="fa fa-envelope"></i>
+                    <div class="content">
+                        <p>
+                            E-mail</p>
+                        <h3>
+                            InglesAI26@gmail.com</h3>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+<div class="section white footer">
+    <div class="container">
+        <div class="p-t-30 p-b-50">
+            <div class="row">
+                <div class="col-md-2 col-lg-2 col-sm-2 col-xs-12 xs-m-b-20">
+                    <img src="assets/img/logo_condensed.png" alt="" data-src="assets/img/logo_condensed.png"
+                        data-src-retina="assets/img/logo2x.png" width="119" height="22" />
+
+                </div>
+                <div class="col-md-4 col-lg-3 col-sm-4  col-xs-12 xs-m-b-20">
+
+                    <div class="xs-no-padding col-md-6 col-lg-6 col-sm-6">
+
+                        <a href="javascript:">InglesAI26@gmail.com</a>
+                    </div>
+                    <div class="clearfix">
+                    </div>
+                </div>
+                <div class="col-md-2 col-lg-2 col-sm-2  col-xs-12 ">
+                    <div class="bold">
+                        FOLLOW US</div>
+                    <br />
+                    <a href="javascript:"><i class="fa fa-facebook fa-2x"></i></a>&nbsp; <a href="javascript:">
+                        <i class="fa fa-twitter fa-2x"></i></a>&nbsp; <a href="javascript:"><i class="fa fa-youtube-play  fa-2x">
+                        </i></a>&nbsp; <a href="javascript:"><i class="fa fa-github fa-2x"></i></a>&nbsp;
+                    <a href="javascript:"><i class="fa fa-dribbble fa-2x"></i></a>&nbsp; <a href="javascript:">
+                        <i class="fa fa-pinterest fa-2x"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+    <!-- BEGIN CORE JS FRAMEWORK -->
+    <script type="text/javascript" src="assets/plugins/jquery-1.8.3.min.js"></script>
+    <script src="assets/plugins/boostrapv3/js/bootstrap.min.js" type="text/javascript"></script>
+    <!-- END CORE JS FRAMEWORK -->
+    <!-- BEGIN JS PLUGIN -->
+    <script src="assets/plugins/pace/pace.min.js" type="text/javascript"></script>
+    <script src="assets/plugins/jquery-unveil/jquery.unveil.min.js" type="text/javascript"></script>
+    <script src="assets/plugins/owl-carousel/owl.carousel.min.js" type="text/javascript"></script>
+    <script src="assets/plugins/modernizr.custom.js" type="text/javascript"></script>
+    <script src="assets/plugins/waypoints.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="assets/plugins/parrallax/js/jquery.parallax-1.1.3.js"></script>
+    <script type="text/javascript" src="assets/plugins/jquery-nicescroll/jquery.nicescroll.min.js"></script>
+    <!-- END JS PLUGIN -->
+    <script type="text/javascript" src="assets/js/core.js"></script>
+</body>
+</html>
